syntax = "proto3";
package proto;

option go_package="../proto";

message StringValue {
    string value = 1;
}
  
message SayHiReq {
    string name = 1;
}
 
service Demo {
    rpc SayHi(SayHiReq) returns (StringValue);
}